--- a/mod.settings
+++ b/mod.settings
@@ -7,8 +7,13 @@ This replaces teleport_trigger with a compatible one for pre [url=wiki.naturalse
 modid: 6C517342
 
 [h1]Compatible maps[/h1]
+[url=steamcommunity.com/sharedfiles/filedetails/?id=359811569]co_iam_lemmings[/url]
 [url=steamcommunity.com/sharedfiles/filedetails/?id=144443947]ns2_co_chuteout[/url]
-[url=steamcommunity.com/sharedfiles/filedetails/?id=148929224]ns2_co_portals[/url] 
+[url=steamcommunity.com/sharedfiles/filedetails/?id=136345528]ns2_co_hellevator[/url]
+[url=steamcommunity.com/sharedfiles/filedetails/?id=110954627]ns2_co_lavacliff[/url]
+[url=steamcommunity.com/sharedfiles/filedetails/?id=136075670]ns2_co_loltrain[/url]
+[url=steamcommunity.com/sharedfiles/filedetails/?id=148929224]ns2_co_portals[/url]
+[url=steamcommunity.com/sharedfiles/filedetails/?id=132992388]ns2_co_spacejump[/url]
 
 [h1]Mapping[/h1]
 Included is the map ns2_eem_test_level which demonstrates the entities. For the Spark Editor there is a updated editor_setup.xml. This editor_setup.xml has a different set of entity definition for teleport_trigger, Build 261 introduced teleport_destination and teleport_trigger entities. Saving new maps with this editor_setup.xml will break teleporters.
